fixed theme settings

--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>Shipping Calculator</legend>
+  <legend>Shipping Rates Calculator</legend>
   <table>
     <tr>
       <td><label for="shipping_calculator">Show the shipping calculator?</label></td>
