fixed theme settings

--- a/settings.html
+++ b/settings.html
@@ -38,7 +38,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2"><span class="note">Do not forget to include the snippet <strong>shipping-calculator</strong> in your cart.liquid template where you want the shipping calculator to appear. Use this Liquid:<br /><code>{% include 'shipping-calculator' %}</code> to include your snippet. You can get the snippet here: <a href="http://google.com">shipping-calculator.liquid</a>.</span></td>
+      <td colspan="2"><span class="note">Do not forget to include the snippet <strong>shipping-calculator</strong> in your cart.liquid template where you want the shipping calculator to appear. Use this Liquid:<br /><code>{% include 'shipping-calculator' %}</code> to include your snippet. You can get the snippet here: <a href="https://github.com/carolineschnapp/shipping-calculator/blob/master/shipping-calculator.liquid">shipping-calculator.liquid</a>.</span></td>
     </tr>
   </table>
 </fieldset>
